# durak

./: Cargo.toml  LICENSE
.cargo/: config.toml
durak/: Cargo.toml
durak/src/: card.rs  collider.rs  main.rs  main_menu.rs  network.rs  persistence.rs  round.rs  round_setup.rs  session.rs  ui.rs  ui_utils.rs  utils.rs
durak/src/card/: interaction.rs  location.rs
durak/src/network/: requests.rs
durak/src/persistence/: default_name.rs
durak/src/round/: card.rs  deck.rs  setup.rs  turn.rs  ui.rs
durak/src/round/card/: collider.rs  cover.rs  interaction.rs  location.rs
durak/src/ui/: game.rs  game_end.rs  main_menu.rs  utils.rs
durak/src/ui/main_menu/: create_game.rs  join_game.rs  lobby.rs  main.rs
durak_lib/: Cargo.toml
durak_lib/src/: common.rs  errors.rs  game.rs  identifiers.rs  lib.rs  network.rs  request.rs  status.rs
durak_lib/src/game/: card.rs  deck.rs  hand.rs  player.rs  table.rs
durak_lib/src/status/: finished.rs  lobby.rs  round.rs
durak_server/: Cargo.toml
durak_server/src/: auth.rs  game.rs  main.rs  state.rs
durak_server/src/game/: finished.rs  lobby.rs  round.rs
src/: card.rs  collider.rs  main.rs  round.rs  round_setup.rs
