[package]
name = "durak_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
bevy = ["dep:bevy_ecs"]
serde = ["dep:serde"]

[dependencies]
bevy_ecs = { version = "0.11.0", optional = true }
serde = { version = "1.0.171", features = ["derive"], optional = true }
strum = { version = "0.25.0", features = ["derive"] }
