[package]
name = "durak_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]
bevy = ["dep:bevy_ecs"]

[dependencies]
axum = { version = "0.6.18", default-features = false, optional = true }
bevy_ecs = { version = "0.11.0", optional = true }
http = "0.2.9"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.43"
